--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Live Park</title>
+    <style>
+        /* Reset margin and padding */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        /* Full-screen iframe */
+        iframe {
+            display: block; /* Remove default inline frame spacing */
+            width: 100vw; /* 100% of the viewport width */
+            height: 100vh; /* 100% of the viewport height */
+            border: none; /* Optional: removes the default iframe border */
+        }
+    </style>
 </head>
 <body>
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTKi0WAGYMIFF7LgZfE63c4%2FFinal-Final-2%3Fnode-id%3D16-12%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D16%253A12%26mode%3Ddesign%26t%3Dw5UNWMfoWx6oE9Jq-1" allowfullscreen></iframe>
+    <iframe 
+        style="border: 1px solid rgba(0, 0, 0, 0.1);"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTKi0WAGYMIFF7LgZfE63c4%2FFinal-Final-2%3Fnode-id%3D16-12%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D16%253A12%26mode%3Ddesign%26t%3Dw5UNWMfoWx6oE9Jq-1" allowfullscreen></iframe>
 </body>
 </html>
