--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         /* Full-screen iframe */
         iframe {
             display: block; /* Remove default inline frame spacing */
-            width: 100vw; /* 100% of the viewport width */
-            height: 100vh; /* 100% of the viewport height */
+            margin-top: 2.5vh;
+            margin-bottom: 2.5vh;
+            margin-left: 2.5vw;
+            margin-right: 2.5vw;
+            width: 95vw; /* 100% of the viewport width */
+            height: 95vh; /* 100% of the viewport height */
             border: none; /* Optional: removes the default iframe border */
         }
     </style>
