--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </style>
 </head>
 <body>
-    <iframe 
-        style="border: 1px solid rgba(0, 0, 0, 0.1);"
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTKi0WAGYMIFF7LgZfE63c4%2FFinal-Final-2%3Fnode-id%3D16-12%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D16%253A12%26mode%3Ddesign%26t%3Dw5UNWMfoWx6oE9Jq-1" allowfullscreen></iframe>
+    <iframe
+    style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+    src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaTXtgKbuP8hZKggDeiJKba%2FFinal-Final-2-(Copy)%3Ftype%3Ddesign%26node-id%3D32-2851%26t%3DvpO4mNAWsvdcrgXZ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D16%253A12%26mode%3Ddesign" allowfullscreen
+    ></iframe>
 </body>
 </html>
